--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </section>
 
         <section class="exp_section">
-            <div class="exp_container pb-4">
+            <div class="exp_container pb-5">
                 <h4 class="c_heading">Professional Experience</h4>
                 <p class="c_line"></p>
                 <p class="c_description">My journey and growth as a Laravel developer</p>
@@ -391,11 +391,59 @@
                             <div class="timeline_card">
                                 <div class="timeline_red_line"></div>
                                 <div class="timeline_card_content">
-                                    <h3>Senior Laravel Developer</h3>
-                                    <p>Web Solutions Inc.<br><small>May 2022 - Present</small></p>
-                                    <p><em>Leading development team in creating robust web applications</em></p>
-                                    <strong>KEY HIGHLIGHTS:</strong>
-                                    <ul>
+                                    <div class="d-flex mb-0">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" class="exp_icon"
+                                            data-lov-id="src/components/Experience.tsx:30:12" data-lov-name="Users"
+                                            data-component-path="src/components/Experience.tsx" data-component-line="30"
+                                            data-component-file="Experience.tsx" data-component-name="Users"
+                                            data-component-content="%7B%22className%22%3A%22h-6%20w-6%20text-laravel%22%7D">
+                                            <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
+                                            <circle cx="9" cy="7" r="4"></circle>
+                                            <path d="M22 21v-2a4 4 0 0 0-3-3.87"></path>
+                                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                        </svg>
+                                        <div>
+                                            <h3 class="mb-0">Senior Laravel Developer</h3>
+                                            <div class="d-flex cust-exp-off">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="exp-case-icon"
+                                                    data-lov-id="src/components/Experience.tsx:102:30"
+                                                    data-lov-name="BriefcaseIcon"
+                                                    data-component-path="src/components/Experience.tsx"
+                                                    data-component-line="102" data-component-file="Experience.tsx"
+                                                    data-component-name="BriefcaseIcon"
+                                                    data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-400%20mr-1%22%7D">
+                                                    <path d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                                    <rect width="20" height="14" x="2" y="6" rx="2"></rect>
+                                                </svg>
+                                                <p>Acetrot</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="exp_off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" class=""
+                                            data-lov-id="src/components/Experience.tsx:110:26"
+                                            data-lov-name="CalendarIcon"
+                                            data-component-path="src/components/Experience.tsx"
+                                            data-component-line="110" data-component-file="Experience.tsx"
+                                            data-component-name="CalendarIcon"
+                                            data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-400%20mr-2%22%7D">
+                                            <path d="M8 2v4"></path>
+                                            <path d="M16 2v4"></path>
+                                            <rect width="18" height="18" x="3" y="4" rx="2"></rect>
+                                            <path d="M3 10h18"></path>
+                                        </svg>
+                                        <p>May 2022 - Present</p>
+                                    </div>
+                                    <p>Leading development team in creating robust web applications</p>
+                                    <strong class="mb-5">KEY HIGHLIGHTS:</strong>
+                                    <ul class="exp_details_list">
                                         <li>Led six-person development team</li>
                                         <li>Designed databases for web applications</li>
                                         <li>Implemented RESTful APIs</li>
@@ -404,36 +452,132 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="timeline-item timeline-right">
                             <div class="timeline_card">
                                 <div class="timeline_red_line"></div>
                                 <div class="timeline_card_content">
-                                    <h3>Senior Laravel Developer</h3>
-                                    <p>Web Solutions Inc.<br><small>May 2022 - Present</small></p>
-                                    <p><em>Leading development team in creating robust web applications</em></p>
-                                    <strong>KEY HIGHLIGHTS:</strong>
-                                    <ul>
-                                        <li>Led six-person development team</li>
-                                        <li>Designed databases for web applications</li>
-                                        <li>Implemented RESTful APIs</li>
-                                        <li>Client communication and requirement analysis</li>
+                                    <div class="d-flex mb-0">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" class="exp_icon ico-blue"
+                                            data-lov-id="src/components/Experience.tsx:44:12" data-lov-name="Code"
+                                            data-component-path="src/components/Experience.tsx" data-component-line="44"
+                                            data-component-file="Experience.tsx" data-component-name="Code"
+                                            data-component-content="%7B%22className%22%3A%22h-6%20w-6%20text-blue-600%22%7D">
+                                            <polyline points="16 18 22 12 16 6"></polyline>
+                                            <polyline points="8 6 2 12 8 18"></polyline>
+                                        </svg>
+                                        <div>
+                                            <h3 class="mb-0">Full Stack Developer</h3>
+                                            <div class="d-flex cust-exp-off">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="exp-case-icon"
+                                                    data-lov-id="src/components/Experience.tsx:102:30"
+                                                    data-lov-name="BriefcaseIcon"
+                                                    data-component-path="src/components/Experience.tsx"
+                                                    data-component-line="102" data-component-file="Experience.tsx"
+                                                    data-component-name="BriefcaseIcon"
+                                                    data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-400%20mr-1%22%7D">
+                                                    <path d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                                    <rect width="20" height="14" x="2" y="6" rx="2"></rect>
+                                                </svg>
+                                                <p>Acetrot</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="exp_off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" class=""
+                                            data-lov-id="src/components/Experience.tsx:110:26"
+                                            data-lov-name="CalendarIcon"
+                                            data-component-path="src/components/Experience.tsx"
+                                            data-component-line="110" data-component-file="Experience.tsx"
+                                            data-component-name="CalendarIcon"
+                                            data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-400%20mr-2%22%7D">
+                                            <path d="M8 2v4"></path>
+                                            <path d="M16 2v4"></path>
+                                            <rect width="18" height="18" x="3" y="4" rx="2"></rect>
+                                            <path d="M3 10h18"></path>
+                                        </svg>
+                                        <p>June 2020 - April 2022</p>
+                                    </div>
+                                    <p>Developed and maintained client web applications</p>
+                                    <strong class="mb-5">KEY HIGHLIGHTS:</strong>
+                                    <ul class="exp_details_list">
+                                        <li>Built Laravel applications with MVC architecture</li>
+                                        <li>Integrated payment gateways</li>
+                                        <li>Created interactive forms with Livewire and Vue.js</li>
+                                        <li>Utilized AWS (RDS, S3, SES)</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
+
                         <div class="timeline-item timeline-left">
                             <div class="timeline_card">
                                 <div class="timeline_red_line"></div>
                                 <div class="timeline_card_content">
-                                    <h3>Senior Laravel Developer</h3>
-                                    <p>Web Solutions Inc.<br><small>May 2022 - Present</small></p>
-                                    <p><em>Leading development team in creating robust web applications</em></p>
-                                    <strong>KEY HIGHLIGHTS:</strong>
-                                    <ul>
-                                        <li>Led six-person development team</li>
-                                        <li>Designed databases for web applications</li>
-                                        <li>Implemented RESTful APIs</li>
-                                        <li>Client communication and requirement analysis</li>
+                                    <div class="d-flex mb-0">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="exp_icon ico-voilet"
+                                            data-lov-id="src/components/Experience.tsx:58:12" data-lov-name="Database"
+                                            data-component-path="src/components/Experience.tsx" data-component-line="58"
+                                            data-component-file="Experience.tsx" data-component-name="Database"
+                                            data-component-content="%7B%22className%22%3A%22h-6%20w-6%20text-php%22%7D">
+                                            <ellipse cx="12" cy="5" rx="9" ry="3"></ellipse>
+                                            <path d="M3 5V19A9 3 0 0 0 21 19V5"></path>
+                                            <path d="M3 12A9 3 0 0 0 21 12"></path>
+                                        </svg>
+                                        <div>
+                                            <h3 class="mb-0">Junior PHP Developer</h3>
+                                            <div class="d-flex cust-exp-off">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="exp-case-icon"
+                                                    data-lov-id="src/components/Experience.tsx:102:30"
+                                                    data-lov-name="BriefcaseIcon"
+                                                    data-component-path="src/components/Experience.tsx"
+                                                    data-component-line="102" data-component-file="Experience.tsx"
+                                                    data-component-name="BriefcaseIcon"
+                                                    data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-400%20mr-1%22%7D">
+                                                    <path d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                                    <rect width="20" height="14" x="2" y="6" rx="2"></rect>
+                                                </svg>
+                                                <p>Acetrot.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="exp_off">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" class=""
+                                            data-lov-id="src/components/Experience.tsx:110:26"
+                                            data-lov-name="CalendarIcon"
+                                            data-component-path="src/components/Experience.tsx"
+                                            data-component-line="110" data-component-file="Experience.tsx"
+                                            data-component-name="CalendarIcon"
+                                            data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-400%20mr-2%22%7D">
+                                            <path d="M8 2v4"></path>
+                                            <path d="M16 2v4"></path>
+                                            <rect width="18" height="18" x="3" y="4" rx="2"></rect>
+                                            <path d="M3 10h18"></path>
+                                        </svg>
+                                        <p>May 2022 - Present</p>
+                                    </div>
+                                    <p>Supported development team on PHP/MySQL solutions</p>
+                                    <strong class="mb-5">KEY HIGHLIGHTS:</strong>
+                                    <ul class="exp_details_list">
+                                        <li>Developed web applications using PHP/MySQL</li>
+                                        <li>Frontend work with HTML, CSS, JavaScript</li>
+                                        <li>Participated in code reviews</li>
+                                        <li>Learned agile methodologies and version control</li>
                                     </ul>
                                 </div>
                             </div>
