contact temp fix

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <h4 class="c_heading">Professional Experience</h4>
                 <p class="c_line"></p>
                 <p class="c_description">My journey and growth as a Laravel developer</p>
-                <div>
+                <div class="pb-5">
                     <div class="timeline">
 
                         <div class="timeline-item timeline-left">
@@ -524,8 +524,7 @@
                                     <div class="d-flex mb-0">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round"
-                                            class="exp_icon ico-voilet"
+                                            stroke-linecap="round" stroke-linejoin="round" class="exp_icon ico-voilet"
                                             data-lov-id="src/components/Experience.tsx:58:12" data-lov-name="Database"
                                             data-component-path="src/components/Experience.tsx" data-component-line="58"
                                             data-component-file="Experience.tsx" data-component-name="Database"
@@ -584,6 +583,146 @@
                         </div>
 
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="con_section">
+            <div class="con_container pb-5">
+                <h3 class="c_heading">Get In Touch</h3>
+                <p class="c_line"></p>
+                <p class="c_description">Have a project in mind or want to discuss opportunities? Feel free to reach
+                    out!</p>
+                <div class="pb-5">
+                    <dic class="row">
+                        <div class="col-md-6">
+                            <div>
+                                <h4 class="con_head_1">Contact Information</h4>
+                                <div class="mb-3">
+                                    <div class="d-flex align-items-center">
+                                        <div class="con_ico">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round"
+                                                class="lucide lucide-mail h-5 w-5 text-laravel"
+                                                data-lov-id="src/components/Contact.tsx:61:18" data-lov-name="Mail"
+                                                data-component-path="src/components/Contact.tsx"
+                                                data-component-line="61" data-component-file="Contact.tsx"
+                                                data-component-name="Mail"
+                                                data-component-content="%7B%22className%22%3A%22h-5%20w-5%20text-laravel%22%7D">
+                                                <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                                                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                                            </svg>
+                                        </div>
+                                        <div class="">
+                                            <p class="ct_head_sub_1">Email</p>
+                                            <p class="ct_head_sub_2"><a href="">contact@gmail.com</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <div class="d-flex align-items-center">
+                                        <div class="con_ico">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round"
+                                                class="lucide lucide-phone h-5 w-5 text-laravel"
+                                                data-lov-id="src/components/Contact.tsx:71:18" data-lov-name="Phone"
+                                                data-component-path="src/components/Contact.tsx"
+                                                data-component-line="71" data-component-file="Contact.tsx"
+                                                data-component-name="Phone"
+                                                data-component-content="%7B%22className%22%3A%22h-5%20w-5%20text-laravel%22%7D">
+                                                <path
+                                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <div class="">
+                                            <p class="ct_head_sub_1">Phone</p>
+                                            <p class="ct_head_sub_2"><a href="">+1 (123) 456-7890</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-4">
+                                    <div class="d-flex align-items-center">
+                                        <div class="con_ico">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round"
+                                                class="lucide lucide-map-pin h-5 w-5 text-laravel"
+                                                data-lov-id="src/components/Contact.tsx:81:18" data-lov-name="MapPin"
+                                                data-component-path="src/components/Contact.tsx"
+                                                data-component-line="81" data-component-file="Contact.tsx"
+                                                data-component-name="MapPin"
+                                                data-component-content="%7B%22className%22%3A%22h-5%20w-5%20text-laravel%22%7D">
+                                                <path
+                                                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0">
+                                                </path>
+                                                <circle cx="12" cy="10" r="3"></circle>
+                                            </svg>
+                                        </div>
+                                        <div class="">
+                                            <p class="ct_head_sub_1">Location</p>
+                                            <p class="ct_head_sub_2">Mumbai & Tirunelveli</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3 mt-4">
+                                    <div class="con-desc mb-5 mb-md-0">
+                                        <h5>Let's Build Something Amazing Together</h5>
+                                        <p>Whether you need a custom web application, e-commerce solution, or API
+                                            integration, I'm here to help turn your ideas into reality with clean,
+                                            efficient code and modern web technologies.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="c_form_container">
+                                <p class="form_header">Send a Message</p>
+                                <div class="c_form">
+
+                                    <div class="input_div">
+                                        <label for="">Name</label>
+                                        <input type="text">
+                                        <!-- <p class="input_err">There is an error</p> -->
+                                    </div>
+                                    <div class="input_div">
+                                        <label for="">Email</label>
+                                        <input type="email">
+                                        <!-- <p class="input_err">There is an error</p> -->
+                                    </div>
+                                    <div class="input_div">
+                                        <label for="">Subject</label>
+                                        <input type="text">
+                                        <!-- <p class="input_err">There is an error</p> -->
+                                    </div>
+                                    <div class="input_div">
+                                        <label for="">Message</label>
+                                        <textarea name="message" id="dsa" rows="3"></textarea>
+                                        <!-- <p class="input_err">There is an error</p> -->
+                                    </div>
+
+                                    <button type="submit" class="cbtn cbtn-danger cust_submit">Send Message
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="lucide lucide-send ml-2 h-4 w-4"
+                                            data-lov-id="src/components/Contact.tsx:158:16" data-lov-name="Send"
+                                            data-component-path="src/components/Contact.tsx" data-component-line="158"
+                                            data-component-file="Contact.tsx" data-component-name="Send"
+                                            data-component-content="%7B%22className%22%3A%22ml-2%20h-4%20w-4%22%7D">
+                                            <path
+                                                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z">
+                                            </path>
+                                            <path d="m21.854 2.147-10.94 10.939"></path>
+                                        </svg>
+                                    </button>
+
+                                </div>
+                            </div>
+                        </div>
+                    </dic>
                 </div>
             </div>
         </section>
