--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-tablet.css">
     <link rel="stylesheet" href="./css/style-mobile.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./icons/fav/favicon-16x16.png">
+    <link rel="manifest" href="./icons/fav/site.webmanifest">
 </head>
 
 <body>
@@ -35,11 +41,11 @@
                     <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
                     <div class="nav_list">
                         <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Skills</a></li>
-                            <li><a href="">Experience</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="#main_section">Home</a></li>
+                            <li><a href="#about_section">About</a></li>
+                            <li><a href="#skills_section">Skills</a></li>
+                            <li><a href="#exp_section">Experience</a></li>
+                            <li><a href="#con_section">Contact</a></li>
                         </ul>
                         <div class="cv">
                             <button>
@@ -58,7 +64,7 @@
             </div>
         </section>
 
-        <section class="main_section">
+        <section class="main_section" id="main_section">
             <div class="main_container">
                 <div class="row align-items-center mt-1 mt-md-4 mb-4">
                     <div class="col-md-6">
@@ -95,15 +101,29 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-none d-md-block">
-                        <div>
+                        <div class="main_img_div">
                             <img src="img/main.jpg" class="main_img" alt="">
+                            <div class="main_img_card">
+                                <div class="main_img_card_circle_div">
+                                    <div class="red_circle"></div>
+                                    <div class="yellow_circle"></div>
+                                    <div class="green_circle"></div>
+                                </div>
+                                <div>
+                                    <p class="mt-1 mb-0">
+                                        &lt;?php <br>
+                                        <span>namespace App\Http\Controllers;</span>
+                                    </p>
+                                    <p class="mb-0 mt-2">class WebDevController<br>{</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="about_section">
+        <section class="about_section" id="about_section">
             <div class="about_container pb-5">
                 <h4 class="c_heading">About Me</h4>
                 <p class="c_line"></p>
@@ -165,7 +185,7 @@
                     </div>
                 </div>
                 <div class="a_end mt-4 pb-2">
-                    <a href="">
+                    <a href="#skills_section">
                         <span>Explore my skills
                         </span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -182,7 +202,7 @@
             </div>
         </section>
 
-        <section class="skills_section">
+        <section class="skills_section" id="skills_section">
             <div class="skills_container pb-4">
                 <h4 class="c_heading">My Skills</h4>
                 <p class="c_line"></p>
@@ -379,7 +399,7 @@
             </div>
         </section>
 
-        <section class="exp_section">
+        <section class="exp_section" id="exp_section">
             <div class="exp_container pb-5">
                 <h4 class="c_heading">Professional Experience</h4>
                 <p class="c_line"></p>
@@ -587,7 +607,7 @@
             </div>
         </section>
 
-        <section class="con_section">
+        <section class="con_section" id="con_section">
             <div class="con_container pb-5">
                 <h3 class="c_heading">Get In Touch</h3>
                 <p class="c_line"></p>
@@ -727,17 +747,94 @@
             </div>
         </section>
 
+        <section class="footer_section">
+            <div class="footer_section_2">
+                <div class="footer_container">
+                    <div class="footer_con_one">
+                        <a href="" class="d-flex align-items-center text-decoration-none mb-4 mb-sm-4 mb-md-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="nav_arrow">
+                                <polyline points="16 18 22 12 16 6"></polyline>
+                                <polyline points="8 6 2 12 8 18"></polyline>
+                            </svg>
+                            <span class="footer_main_text">Tirumani Nadar
+                            </span>
+                        </a>
+                        <div>
+                            <div class="foot_link_ico_list">
+                                <a href="" class="foot_a">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="" data-lov-id="src/components/Footer.tsx:22:14"
+                                        data-lov-name="Github" data-component-path="src/components/Footer.tsx"
+                                        data-component-line="22" data-component-file="Footer.tsx"
+                                        data-component-name="Github"
+                                        data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-300%22%7D">
+                                        <path
+                                            d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4">
+                                        </path>
+                                        <path d="M9 18c-4.51 2-5-2-7-2"></path>
+                                    </svg>
+                                </a>
+                                <a href="" class="foot_a">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="" data-lov-id="src/components/Footer.tsx:31:14"
+                                        data-lov-name="Mail" data-component-path="src/components/Footer.tsx"
+                                        data-component-line="31" data-component-file="Footer.tsx"
+                                        data-component-name="Mail"
+                                        data-component-content="%7B%22className%22%3A%22h-4%20w-4%20text-gray-300%22%7D">
+                                        <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                                        <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
 
+                    <hr class="footer_hr">
 
-        <section class="home" style="height: 1000px;background-color: aqua;">
+                    <div class="footer_con_two text-center">
+                        <p>© 2025 <span>Tirumani Nadar</span>. All rights reserved.</p>
+                    </div>
 
+                </div>
         </section>
 
     </main>
+
+    <div class="scrolltotop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="lucide lucide-arrow-up h-5 w-5" data-lov-id="src/components/ScrollToTop.tsx:36:10"
+            data-lov-name="ArrowUp" data-component-path="src/components/ScrollToTop.tsx" data-component-line="36"
+            data-component-file="ScrollToTop.tsx" data-component-name="ArrowUp"
+            data-component-content="%7B%22className%22%3A%22h-5%20w-5%22%7D">
+            <path d="m5 12 7-7 7 7"></path>
+            <path d="M12 19V5"></path>
+        </svg>
+    </div>
+
+    <!-- <div class="scrolltotop-wrapper">
+        <div class="scrolltotop" role="button" aria-label="Scroll to Top">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-arrow-up h-5 w-5" data-lov-id="src/components/ScrollToTop.tsx:36:10"
+                data-lov-name="ArrowUp" data-component-path="src/components/ScrollToTop.tsx" data-component-line="36"
+                data-component-file="ScrollToTop.tsx" data-component-name="ArrowUp"
+                data-component-content="%7B%22className%22%3A%22h-5%20w-5%22%7D">
+                <path d="m5 12 7-7 7 7"></path>
+                <path d="M12 19V5"></path>
+            </svg>
+        </div>
+    </div> -->
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
+
+<script src="./js/index.js"></script>
 
 </html>
