--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <section class="main_section" id="main_section">
             <div class="main_container">
                 <div class="row align-items-center mt-1 mt-md-4 mb-4">
-                    <div class="col-md-6">
+                    <div class="col-md-6 cust-animation-div">
                         <p class="lwd_main">Laravel Web Developer</p>
-                        <h1 class="tn_main">Tirumani Nadar</h1>
+                        <h1 class="tn_main text-typing">Tirumani Nadar</h1>
                         <h4 class="fs_main">Full-Stack</h4>
                         <h4 class="wd_main mb-3">Web Developer</h4>
                         <p class="desc_main pb-3">Passionate about building robust and scalable web applications with
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 d-none d-md-block">
+                    <div class="col-md-6 d-none d-md-block cust-animation-div">
                         <div class="main_img_div">
                             <img src="img/main.jpg" class="main_img" alt="">
                             <div class="main_img_card">
@@ -130,13 +130,13 @@
                 <p class="c_description">Get to know more about me and my journey as a Web Developer</p>
 
                 <div class="row pb-5">
-                    <div class="col-md-6 mb-4 mb-md-0">
+                    <div class="col-md-6 mb-4 mb-md-0 cust-animation-div">
                         <div class="about_img_div">
                             <img src="img/about.jpg" alt="" class="about_img">
                             <div class="about_img_circle">4+ Years</div>
                         </div>
                     </div>
-                    <div class="col-md-6 mt-5 mt-md-0">
+                    <div class="col-md-6 mt-5 mt-md-0 cust-animation-div">
                         <h5 class="cont_heading">PHP Developer & Web Enthusiast</h5>
                         <p class="cont_desc">I am a Web Developer with four years of experience, demonstrating expertise
                             in crafting
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="a_end mt-4 pb-2">
+                <div class="a_end mt-4 pb-2 cust-animation-div">
                     <a href="#skills_section">
                         <span>Explore my skills
                         </span>
@@ -211,7 +211,7 @@
                 <div class="skill_div mb-5">
                     <div class="row">
 
-                        <div class="col-md-4 mb-5 mb-md-0">
+                        <div class="col-md-4 mb-5 mb-md-0 cust-animation-div">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>B</span>
@@ -279,7 +279,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 mb-5 mb-md-0">
+                        <div class="col-md-4 mb-5 mb-md-0 cust-animation-div">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>B</span>
@@ -347,7 +347,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 mb-0 mb-md-0">
+                        <div class="col-md-4 mb-0 mb-md-0 cust-animation-div">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>D</span>
@@ -408,7 +408,7 @@
                     <div class="timeline">
 
                         <div class="timeline-item timeline-left">
-                            <div class="timeline_card">
+                            <div class="timeline_card cust-animation-div">
                                 <div class="timeline_red_line"></div>
                                 <div class="timeline_card_content">
                                     <div class="d-flex mb-0">
@@ -474,7 +474,7 @@
                         </div>
 
                         <div class="timeline-item timeline-right">
-                            <div class="timeline_card">
+                            <div class="timeline_card cust-animation-div">
                                 <div class="timeline_red_line"></div>
                                 <div class="timeline_card_content">
                                     <div class="d-flex mb-0">
@@ -538,7 +538,7 @@
                         </div>
 
                         <div class="timeline-item timeline-left">
-                            <div class="timeline_card">
+                            <div class="timeline_card cust-animation-div">
                                 <div class="timeline_red_line"></div>
                                 <div class="timeline_card_content">
                                     <div class="d-flex mb-0">
@@ -615,7 +615,7 @@
                     out!</p>
                 <div class="pb-5">
                     <dic class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 cust-animation-div">
                             <div>
                                 <h4 class="con_head_1">Contact Information</h4>
                                 <div class="mb-3">
@@ -697,7 +697,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 cust-animation-div">
                             <div class="c_form_container">
                                 <p class="form_header">Send a Message</p>
                                 <div class="c_form">
