--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/style-tablet.css">
-    <link rel="stylesheet" href="./css/style-mobile.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./icons/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./icons/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./icons/fav/favicon-16x16.png">
     <link rel="manifest" href="./icons/fav/site.webmanifest">
+
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-tablet.css">
+    <link rel="stylesheet" href="./css/style-mobile.css">
+    <link rel="stylesheet" href="./css/style-desktop-only.css">
 </head>
 
 <body>
@@ -48,16 +50,18 @@
                             <li><a href="#con_section">Contact</a></li>
                         </ul>
                         <div class="cv">
-                            <button>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="lucide lucide-download mr-2 h-4 w-4">
-                                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                                    <polyline points="7 10 12 15 17 10"></polyline>
-                                    <line x1="12" x2="12" y1="15" y2="3"></line>
-                                </svg>
-                                <span>Download CV</span>
-                            </button>
+                            <a href="./files/Resume2025.pdf" target="_blank">
+                                <button class="">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="lucide lucide-download mr-2 h-4 w-4">
+                                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                                        <polyline points="7 10 12 15 17 10"></polyline>
+                                        <line x1="12" x2="12" y1="15" y2="3"></line>
+                                    </svg>
+                                    <span>Download CV</span>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
